--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -20,12 +20,17 @@
     color: black;
 }
 .content-container {
+    display: flex;
+    flex-direction: row;
     text-align: start;
-    margin: 20px 12% 0px 12%;
+    margin: 20px 15% 0px 15%;
     box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.10);
 
 }
-
+/* .task-container {
+    display: flex;
+    flex-direction: row;
+} */
 
 
 
